Had to fix the fbo and mro detail component to get the textwrap to work

--- a/app/pages/fbo/fbo-detail.css
+++ b/app/pages/fbo/fbo-detail.css
@@ -1,6 +1,6 @@
 ﻿*{
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 7px;
+    margin-right: 7px;
     font-size: 16px;
 }
 
@@ -29,10 +29,12 @@
 }
 
 .amenitieslist, .serviceslist {
-    font-size: 17;
+    font-size: 18;
+	margin: 5;
+	line-height: 2;
 }
 
-.contact{
+.contact{ 
     font-size: 17px;
     font-weight: 700;
     margin-top: 5;
@@ -40,7 +42,8 @@
 }
 
 .contactlist{
-    font-size: 14px;
+    font-size: 15px;
+	line-height: 2;
 }
 
 .contactbox{
@@ -51,8 +54,4 @@
     margin-right: 0;
     opacity: .8;
     border-radius: 10;
-}
-
-.medium-spacing {
-  margin: 5;
 }
