--- a/app/pages/mro/mro-detail.css
+++ b/app/pages/mro/mro-detail.css
@@ -1,6 +1,6 @@
 ﻿*{
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 7px;
+    margin-right: 7px;
     font-size: 16px;
 }
 
@@ -33,7 +33,8 @@
 }
 
 .serviceslist{
-   font-size: 17;
+   font-size: 18;
+   line-height: 2;
 }
 
 .contact{
@@ -44,7 +45,8 @@
 }
 
 .contactlist{
-    font-size: 14px;
+    font-size: 15px;
+	line-height: 2;
 }
 
 .contactbox{
@@ -55,9 +57,4 @@
     margin-right: 0;
     opacity: .8;
     border-radius: 10;
-}
-
-.medium-spacing {
-  margin: 5;
-
 }
